@@ -4,7 +4,7 @@ News
 Pyclewn 2.0
 -----------
 
-.. January 15, 2015
+.. January 16, 2015
 
 Changes
 ^^^^^^^
@@ -33,6 +33,10 @@ Bug fixes
 
 * The terminal spawned by the ``inferiortty`` command is now automatically
   closed at the end of each debugging session.
+
+* Fix a gdb version parsing error on the non-conformant Cygwin versions of
+  gdb. See the bug report at
+  http://cygwin.com/ml/cygwin/2014-06/msg00211.html.
 
 Pyclewn 1.11
 ------------
